--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header h4{
     margin-top: 0px; 
 }
 
-.container{
+div.container{
     margin-left: auto;
     margin-right: auto;
     text-align: center;
